assets/css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: #eff3f4;
}

h1,
h2,
h3,
h4,
h5,
p,
select,
button,
ul,
li,
a,
tr,
td {
    font-family: 'Montserrat', 'sans-serif';
    font-weight: 400;
}

tbody,
.rating-row,
.recall-summary,
.recall-number {
    color: #424242;
}

.container {
    width: 85%;
    margin: 30px auto;
}

.hero-container {
    width: 90%;
    margin: auto;
}

.rounding {
    border-radius: 4px;
}

.txt-logo {
    padding: 15px 0;
    font-size: 2rem;
}

.select-boxes select {
    height: 2rem;
    padding-left: 6px;
    margin-right: 6px;
    margin-bottom: 20px;
    border-radius: 3px;
    font-weight: 400;
    color: #000;
    border: 1px solid #b4b4b4;
    cursor: pointer;
}

.select-boxes button {
    background-color: #0f7ec2;
    color: #fff;
    border: 1px solid #0f7ec2;
    font-weight: 500;
    height: 2rem;
    padding: 0 10px;
    border-radius: 3px;
    cursor: pointer;
    transition: linear .3s;
}

.select-boxes button:hover {
    background-color: #46b7ec;
    border: 1px solid #b4b4b4;
}

.hero {
    background-color: #33a7dc;
    min-height: 100vh;
    width: 100%;
    position: relative;
    color: #fff;
}

.hero-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

.hero-img {
    width: 100%;
    height: auto;
}

.cards {
    display: flex;
    justify-content: space-between;
    margin-bottom: 60px;
}

.card {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #fff;
    padding: 30px;
    margin-right: 20px;
}

.card:last-child {
    margin-right: 0;
}

.card-img {
    padding: 20px;
}

.card-img img {
    max-width: 264px;
}

.card-content a {
    line-height: 2.5;
    color: #0f7ec2;
}

.down-arrow a {
    font-size: 2rem;
    position: absolute;
    bottom: 12%;
    left: 49%;
    color: #2d7597;
    transition: linear .3s;
}

.down-arrow a:hover {
    color: #80d3fa;
    transform: scale(1.3);
}

.search-box {
    background-color: #fff;
    padding: 40px 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.title {
    font-weight: 500;
    color: #000;
}

.subtitle {
    padding-bottom: 15px;
    color: #5f5f5f;
}

.tab-section {
    background-color: #fff;
    padding: 30px;
    min-height: 200px;
}

.tabs {
    border-bottom: 1px solid rgb(218, 218, 218);
}

.tabs ul {
    padding-bottom: 10px;
}

.tabs ul li {
    display: inline;
    margin-right: 1.5rem;
    cursor: pointer;
    font-size: 1.125rem;
}

#details-div {
    display: flex;
    flex-direction: row;
}

#veh-img {
    width: 50%;
}

#veh-img img {
    width: 100%;
    padding: 10px 0;
}

#car-model-data {
    width: 50%;
}

.model-data {
    width: 100%;
    padding: 30px;
    text-align: left;
    padding-bottom: 10px;
}

#recall-div {
    padding: 30px 0;
}

.recall-title {
    font-weight: 600;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.1rem;
    text-transform: uppercase;
    color: #0f7ec2;
    padding-bottom: 3px;
}

.recall-summary {
    font-weight: 400;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1rem;
    text-transform: uppercase;
    padding-bottom: 3px;
}

.recall-number {
    font-size: .85rem;
    font-family: Arial, Helvetica, sans-serif;
}

.footer {
    background-color: #3b3b3b;
    height: 80px;
    color: #fff;
    display: flex;
    text-align: center;
    justify-content: center;
}

.footer a {
    color: #33a7dc;
}

.hide {
    display: none !important;
}

.box-shadow {
    box-shadow: 0 0.5em 1em -0.125em rgba(124, 124, 124, 0.1), 0 0 0 1px rgba(124, 124, 124, 0.01);
}

.is-active {
    color: #0f7ec2;
    padding-bottom: 10px;
    border-bottom: 2px solid #0f7ec2;
}

@media only screen and (max-width: 1000px) {
    .select-boxes select {
        display: block;
        width: 100%;
        margin-bottom: 20px;
    }

    .select-boxes button {
        display: block;
        width: 100%;
        margin-bottom: 20px;
    }

    .cards {
        flex-direction: column;
    }

    .card {
        width: 100%;
        margin-bottom: 30px;
        margin-right: 0;
    }

    #details-div {
        display: flex;
        flex-direction: column;
    }

    #veh-img {
        width: 100%;
    }

    #car-model-data {
        width: 100%;
    }

}

@media only screen and (max-width: 500px) {
    .container {
        width: 100%;
    }

    .model-data {
        padding: 0;
        font-size: .80rem;
    }

    .tabs ul li {
        font-size: .8rem;
    }

    .recall-title {
        font-size: .9rem;
    }

    .recall-summary {
        font-size: .75rem;
    }

    .recall-number {
        font-size: .65rem;
    }
}

